--- a/configuration.properties
+++ b/configuration.properties
@@ -1,5 +1,9 @@
-amazonUrl =     https:///.amazon.com
-facebookUrl =   https://facebook.com
+!--  Test datalari icerir, key =value seklinde calisir.
+!--  key/value seklinde calistigindan ayni key 2 kere kullanilamaz
+browser = chrome
+
+amazonUrl =     https://www.amazon.com
+facebookUrl =   https://www.facebook.com
 
 facebookWrongUsername=dgdfhfghfg
 facebookWrongPassword = 123456
