--- a/configuration.properties
+++ b/configuration.properties
@@ -4,6 +4,7 @@ browser = chrome
 
 amazonUrl =     https://www.amazon.com
 facebookUrl =   https://www.facebook.com
+hotelMyCampUrl = https://www.hotelmycamp.com/
 
 facebookWrongUsername=dgdfhfghfg
 facebookWrongPassword = 123456
