--- a/configuration.properties
+++ b/configuration.properties
@@ -9,5 +9,10 @@ hotelMyCampUrl = https://www.hotelmycamp.com/
 facebookWrongUsername=dgdfhfghfg
 facebookWrongPassword = 123456
 
+brcUrl=https://www.bluerentalcars.com/
+brcValidEmail=customer@bluerentalcars.com
+brcValidPassword=12345
+brcValidUserName=Jordon Stark
 
-
+brcWrongEmail=client@bluerentalcars.com
+brcWrongPassword=54321
