--- a/configuration.properties
+++ b/configuration.properties
@@ -5,6 +5,9 @@ browser = chrome
 amazonUrl =     https://www.amazon.com
 facebookUrl =   https://www.facebook.com
 hotelMyCampUrl = https://www.hotelmycamp.com/
+hotelUsername = manager
+hoterPassword = Manager1!
+
 
 facebookWrongUsername=dgdfhfghfg
 facebookWrongPassword = 123456
@@ -16,3 +19,9 @@ brcValidUserName=Jordon Stark
 
 brcWrongEmail=client@bluerentalcars.com
 brcWrongPassword=54321
+
+createHotelUrl = https://www.concorthotel.com/
+createHotelValidUserName = manager
+createHotelValidPassword = Manager1!
+
+
