--- a/configuration.properties
+++ b/configuration.properties
@@ -24,4 +24,7 @@ createHotelUrl = https://www.concorthotel.com/
 createHotelValidUserName = manager
 createHotelValidPassword = Manager1!
 
+sauceUrl = https://www.saucedemo.com/
+kullaniciAdi=standard_user
+kkullaniciSifre=secret_sauce
 
