--- a/configuration.properties
+++ b/configuration.properties
@@ -28,3 +28,8 @@ sauceUrl = https://www.saucedemo.com/
 kullaniciAdi=standard_user
 kkullaniciSifre=secret_sauce
 
+reactUrl = https://react-shopping-cart-67954.firebaseapp.com/
+
+
+
+
